src/main/java/org/example/apirest/error/photo_exceptions/PhotoException.java
package org.example.apirest.error.photo_exceptions;

public class PhotoException extends RuntimeException {
    public PhotoException(String message) {
        super("Not valid photo : " + message);
    }
}
